sandc/test/fixtures/astRegression/shouldFail/productions/switchExpression/EmptyCaseBody.sand
pub class EmptyCaseBody {
    foo() {
        (
            switch val {
                case a {
                    b()
                }

                case a {

                }

                else {
                    b()
                }
            }
        )
    }
}